--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
 
 .game {
      border: none;
-     width: 960px;
+     width: 480px;
      height: 540px;
+}
+text {
+      margin-left: 15px;
+      margin-right: 15px;
+}
+body {
+      background-color: #ff6666;
+      margin: 0;
+      padding: 0;
+      font-family: 'Shag-Lounge', sans-serif;
 }
