--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ text {
       margin-right: 15px;
 }
 body {
-      background-color: #ff6666;
+      background-color: #ea2025;
       margin: 0;
       padding: 0;
-      font-family: 'Shag-Lounge', sans-serif;
+      font-family: 'Open Sans', sans-serif;
 }
