--- a/style.css
+++ b/style.css
@@ -10,12 +10,17 @@
      width: 960px;
      height: 540px;
 }
-text {
-      margin-left: 15px;
-      margin-right: 15px;
+.name {
+     text-align: left;
+     margin: 20px;
+     padding: 20px;
+     font-family: 'Times New Roman', serif;
 }
+text {
+     margin-left: 15px;
+     margin-right: 15px;
 body {
-      background-color: #ea2025;
+      background-color: #ff2025;
       margin: 0;
       padding: 0;
       font-family: 'Open Sans', sans-serif;
