--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@
      padding: 20px;
      font-family: 'Times New Roman', serif;
 }
+.center {
+        max-width: 1080px;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+        
+    }
 text {
      margin-left: 15px;
      margin-right: 15px;
