--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 .game {
      border: none;
-     width: 700px;
+     width: 720px;
      height: 540px;
 }
 .name {
@@ -25,6 +25,7 @@
 text {
       margin-left: 15px;
       margin-right: 15px;
+}
 body {
       background-color: #ff2025;
       margin: 0;
