--- a/style.css
+++ b/style.css
@@ -27,8 +27,35 @@ text {
       margin-right: 15px;
 }
 body {
-      background-color: #ff2025;
+      background: #ff2025;
       margin: 0;
       padding: 0;
       font-family: 'Open Sans', sans-serif;
+}
+h2 {
+      text-align: center;
+}
+details {
+      background: #5bbdff;
+      margin: 10px 0;
+      border-radius: 6px;
+      padding: 10px;
+}
+lists {
+      cursor: pointer;
+      font-size: 1.3em;
+      font-weight: bold;
+}
+ul {
+      list-style: none;
+      padding-left: 1em;
+}
+li a {
+      color: #ff2025;
+      text-decoration: none;
+      display: block;
+      padding: 2px 0;
+}
+li a:hover {
+      text-decoration: underline;
 }
