--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
       text-align: center;
 }
 details {
-      background: #5bbdff;
+      background-color: #5bbdff;
       margin: 10px 0;
       border-radius: 6px;
       padding: 10px;
@@ -58,4 +58,7 @@ li a {
 }
 li a:hover {
       text-decoration: underline;
+}
+.versions {
+     background-color: #f4f4f4;
 }
