--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ ul {
       padding-left: 1em;
 }
 li a {
-      color: #ff2025;
+      color: #ffffff;
       text-decoration: none;
       display: block;
       padding: 2px 0;
