change name to listt

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ details {
       border-radius: 6px;
       padding: 10px;
 }
-lists {
+listt {
       cursor: pointer;
       font-size: 1.3em;
       font-weight: bold;
