--- a/style.css
+++ b/style.css
@@ -17,18 +17,20 @@
      font-family: 'Times New Roman', serif;
 }
 .center {
-      max-width: 1080px;
-      margin: 0 auto;
-      padding: 20px;
-      text-align: center;
-    }
+     max-width: 1080px;
+     margin: 0 auto;
+     padding: 20px;
+     text-align: center;
+}
+cr {
+     font-family: 'Times New Roman', serif;
 h3 {
-      margin-left: 15px;
-      margin-right: 15px;
+     margin-left: 15px;
+     margin-right: 15px;
 }
 body {
-      background: #ff2025;
-      margin: 0;
-      padding: 0;
-      font-family: 'Open Sans', sans-serif;
+     background: #7CEBEF;
+     margin: 0;
+     padding: 0;
+     font-family: 'Open Sans', sans-serif;
 }
