--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h3 {
      margin-right: 15px;
 }
 body {
-     background: #7CEBEF;
+     background: #579ee6;
      margin: 0;
      padding: 0;
      font-family: 'Open Sans', sans-serif;
