--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
      flex-direction: column;
      align-items: center;
 }
+.title {
+     font-family: bfdi;
+     src: url(https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/Fonts/Shag-Lounge.otf);
+     font-size: 50px;
+     margin: 0;
+}
 .game {
      border: none;
      width: 720px;
