--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 .title {
      font-family: bfdi;
-     src: url(https://raw.githubusercontent.com/Alfakma17/CoinyClicker/refs/heads/main/Fonts/Shag-Lounge.otf);
+     src: url(Fonts/Shag-Lounge.otf);
      font-size: 50px;
      margin: 0;
 }
