--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.topbar {
+     background-color: #b0e9ff);
+     padding: 0px;
+     text-align: center;
+}
 .background {
      background-color: rgb(248, 248, 248);
      padding: 20px;
