--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .topbar {
-     background-color: #b0e9ff);
+     background-color: #b0e9ff;
      padding: 0px;
      text-align: center;
 }
@@ -47,7 +47,7 @@
 .cr {
      font-family: 'Open Sans', sans-serif;
 }
-h3 {
+text {
      margin-left: 15px;
      margin-right: 15px;
 }
