--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
 .topbar {
-     background-color: #b0e9ff;
-     padding: 9px;
+     background: linear-gradient(90deg, #1aa2e0 0%, #84ceff 100%);
+     color: #0f172a;
+     padding: 12px 24px;
+     position: sticky;
+     top: 0;
+     z-index: 1000;
+     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
      text-align: center;
 }
+.topbar .title {
+     font-size: 2.7rem;
+     -webkit-text-stroke: 1px rgb(148, 118, 42);
+     font-weight: bold;
+     margin: 0;
+}
+.topbar .version {
+     font-size: 1.2rem;
+     -webkit-text-stroke: 0;
+     font-weight: normal;
+     color: #0369a1;
+}
 .background {
-     background-color: rgb(248, 248, 248);
+     background-color: rgba(95, 161, 236, 0.7);
      padding: 24px;
      display: flex;
+     border-radius: 30px;
      flex-direction: column;
      align-items: center;
 }
@@ -16,25 +34,42 @@
 }
 .title {
      font-family: bfdi;
-     font-size: 50px;
      margin: 0;
-     color: #ec9f00;
+     color: #eca10d;
 }
 .version {
      font-family: bfdi;
-     font-size: 18px;
      color: gray;
      margin-left: 5px;
      vertical-align: middle;
 }
 .game {
+     position: relative;
      border: none;
-     width: 720px;
-     height: 540px;
+     width: 100%;
+     max-width: 640px;
+     height: 480px;
+     max-height: 480px;
+     overflow: hidden;
+     margin: 0px auto;
+     border-radius: 12px;
+}
+.game iframe {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     border: none;
+}
+@media (max-width: 600px) {
+  .iframe-container {
+    padding-top: 100%;
+  }
 }
 .note {
-     color: gray;
-     font-size: 14px;
+     color: rgb(218, 218, 218);
+     font-size: 15px;
      text-align: left;
      margin: 20px;
      padding: 4px;
@@ -55,9 +90,9 @@
      font-family: bfdi;
 }
 .center {
-     max-width: 1080px;
+     max-width: 1000px;
      margin: 0 auto;
-     padding: 20px;
+     padding: 21px;
      text-align: center;
 }
 text {
@@ -65,7 +100,7 @@ text {
      margin-right: 14px;
 }
 body {
-     background: #579ee6;
+     background: #4b535a;
      margin: 0;
      padding: 0;
      font-family: bfdi;
