--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
      top: 0;
      z-index: 1000;
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-     text-align: center;
+     display: flex;
+     text-align: center; 
+     justify-content: center;
+     align-items: center;
 }
 .topbar .title {
      font-size: 2.7rem;
@@ -39,7 +42,6 @@
 }
 .version {
      font-family: bfdi;
-     color: gray;
      margin-left: 5px;
      vertical-align: middle;
 }
@@ -94,6 +96,17 @@
      margin: 0 auto;
      padding: 21px;
      text-align: center;
+     animation: fadeIn 1s ease-in-out backwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.98);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 text {
      margin-left: 14px;
